<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".CadastrarLivro">

        <TextView
            android:id="@+id/textViewTitulo"
            android:layout_width="44dp"
            android:layout_height="28dp"
            android:text="@string/titulo_cadastro"
            app:layout_constraintBottom_toBottomOf="@+id/editTextTextTitulo"
            app:layout_constraintEnd_toStartOf="@+id/editTextTextTitulo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/editTextTextTitulo" />

        <EditText
            android:id="@+id/editTextTextTitulo"
            android:layout_width="309dp"
            android:layout_height="44dp"
            android:ems="10"
            android:inputType="text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.731"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.15" />

        <EditText
            android:id="@+id/editTextTextAutor"
            android:layout_width="310dp"
            android:layout_height="45dp"
            android:ems="10"
            android:inputType="text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.735"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextTitulo"
            app:layout_constraintVertical_bias="0.014" />

        <EditText
            android:id="@+id/editTextTextAno"
            android:layout_width="311dp"
            android:layout_height="46dp"
            android:ems="10"
            android:inputType="text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.73"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.303" />

        <TextView
            android:id="@+id/textViewAutor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/autor_cadastro"
            app:layout_constraintBottom_toBottomOf="@+id/editTextTextAutor"
            app:layout_constraintEnd_toStartOf="@+id/editTextTextAutor"
            app:layout_constraintHorizontal_bias="0.39"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/editTextTextAutor"
            app:layout_constraintVertical_bias="0.461" />

        <TextView
            android:id="@+id/textViewAno"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ano_cadastro"
            app:layout_constraintBottom_toBottomOf="@+id/editTextTextAno"
            app:layout_constraintEnd_toStartOf="@+id/editTextTextAno"
            app:layout_constraintHorizontal_bias="0.326"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/editTextTextAno"
            app:layout_constraintVertical_bias="0.444" />

        <RatingBar
            android:id="@+id/ratingBar"
            android:layout_width="242dp"
            android:layout_height="52dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.4" />

        <TextView
            android:id="@+id/textViewNota"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nota_cadastro"
            app:layout_constraintBottom_toBottomOf="@+id/ratingBar"
            app:layout_constraintEnd_toStartOf="@+id/ratingBar"
            app:layout_constraintHorizontal_bias="0.296"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/ratingBar"
            app:layout_constraintVertical_bias="0.484" />

        <Button
            android:id="@+id/buttonCadastrarLivro"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="133dp"
            android:layout_height="59dp"
            android:text="@string/cadastrar_cadastro"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.512"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.734" />

        <Button
            android:id="@+id/buttonCancelar"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="133dp"
            android:layout_height="59dp"
            android:text="@string/cancelar_cadastro"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.512"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.878" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>